<?xml version="1.0"?>
<package format="2">
  <name>car_racing_ros</name>
  <version>0.0.0</version>
  <description>CarRacing项目ROS封装（应付提交版）</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
