<?xml version="1.0"?>
<package format="2">
  <name>mujoco_manrun</name>
  <version>1.0.0</version>
  <description>ROS封装的人形机器人Mujoco仿真包，支持CPG步态控制、标准ROS接口通信</description>
  <maintainer email="your_email@xxx.com">your_name</maintainer>
  <license>MIT</license>

  <!-- 构建依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- 运行依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rviz</exec_depend>

  <!-- 导出配置 -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
